time series and link updates

--- a/content/courses/economics/2-links-docs.html
+++ b/content/courses/economics/2-links-docs.html
@@ -23,6 +23,13 @@ weight: 30
 <p>{{% alert note %}}
 On the page you are reviewing, the icons and the contents they refer are as follows: 🇹🇷 <font color="red"><strong>Turkish</strong></font>, 🇺🇸 <font color="red"><strong>English</strong></font>, 🔄 <font color="red"><strong>Will be Updated</strong></font>, 🔥 <font color="red"><strong>In Progress</strong></font>, and ⛔ <font color="red"><strong>No Longer Valid</strong></font>.
 {{% /alert %}}</p>
+<div id="online-class" class="section level2">
+<h2>Online-Class</h2>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=dP1UaNDRJxY&amp;list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&amp;index=1">Microsoft Teams - Konuk Olarak Online Derse Bağlanma</a> 🇹🇷</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar">CANVAS Bilgileri (YouTube Playlist)</a> 🇹🇷🔥</li>
+</ul>
+</div>
 <div id="akademi-ekonometri" class="section level2">
 <h2>Akademi Ekonometri</h2>
 <ul>
@@ -36,22 +43,8 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU">Economics - Online-Class (YouTube Playlist)</a> 🇺🇸🔄</li>
 </ul></li>
 </ul>
-</div>
-<div id="other-documents" class="section level2">
-<h2>Other Documents</h2>
-<ul>
-<li>🔥</li>
-</ul>
-</div>
-<div id="online-class" class="section level2">
-<h2>Online-Class</h2>
-<ul>
-<li><a href="https://www.youtube.com/watch?v=dP1UaNDRJxY&amp;list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&amp;index=1">Microsoft Teams - Konuk Olarak Online Derse Bağlanma</a> 🇹🇷</li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar">CANVAS Bilgileri (YouTube Playlist)</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe">DYS Bilgileri (YouTube Playlist)</a> 🇹🇷⛔</li>
-</ul></li>
-</ul>
+<!-- ## Other Documents -->
+<!-- - 🔥 -->
 </div>
 <div id="other-links" class="section level2">
 <h2>Other Links</h2>
