--- a/content/courses/economics/3-exams-ps.html
+++ b/content/courses/economics/3-exams-ps.html
@@ -26,15 +26,16 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <div id="problem-sets" class="section level2">
 <h2>Problem Sets</h2>
 <ul>
-<li><a href="">CANVAS’ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/watch?v=OOqC0JrtOaI&amp;feature=youtu.be">DYS’de Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷⛔</li>
-</ul></li>
+<li><a href="">CANVAS’ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷🔥</li>
 </ul>
 </div>
 <div id="exams" class="section level2">
 <h2>Exams</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -53,13 +54,7 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 </tbody>
 </table>
 <ul>
-<li><a href="">CANVAS’ta Online Çoktan Seçmeli Sınav Nasıl Yapılır?</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/watch?v=V_Oyg-WGoK4&amp;feature=youtu.be">DYS’de Online Çoktan Seçmeli Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
-</ul></li>
-<li><a href="">CANVAS’a Online Klasik Sınav Nasıl Yüklenir</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/watch?v=wsUB6-fTxA8&amp;feature=youtu.be">DYS’ye Online Klasik Sınav Nasıl Yüklenir?</a> 🇹🇷⛔</li>
-</ul></li>
+<li><a href="">CANVAS’ta Online Çoktan Seçmeli Sınav Nasıl Yapılır?</a> 🇹🇷🔥</li>
+<li><a href="">CANVAS’a Online Klasik Sınav Nasıl Yüklenir</a> 🇹🇷🔥</li>
 </ul>
 </div>
