--- a/content/courses/economics/4-lectures.html
+++ b/content/courses/economics/4-lectures.html
@@ -26,6 +26,10 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <div id="week-1" class="section level2">
 <h2>Week #1</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -63,6 +67,10 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <div id="week-2" class="section level2">
 <h2>Week #2</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -96,6 +104,10 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <div id="week-3" class="section level2">
 <h2>Week #3</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -137,6 +149,10 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <div id="week-4" class="section level2">
 <h2>Week #4</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -174,6 +190,10 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <div id="week-5" class="section level2">
 <h2>Week #5</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -214,7 +234,7 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <td align="left"><a href="../../../repo/akek/courses/economics/Economics_-_Week_5_Worksheet_Solution.pdf">Worksheet Solutions</a></td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi_-_Hafta_5_CS_Cevaplar__Grafiksel.pdf">Çalışma Soruları Cevaplar - Grafiksel</a> 🔥</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi_-_Hafta_5_CS_Cevap__Grafiksel.pdf">Çalışma Soruları Cevaplar - Grafiksel</a> 🔥</td>
 <td align="left"><a href="../../../repo/akek/courses/economics/Economics_-_Week_5_Worksheet_Solution__Graphical.pdf">Worksheet Solutions - Graphical</a></td>
 </tr>
 </tbody>
@@ -223,6 +243,10 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <div id="week-6" class="section level2">
 <h2>Week #6</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -264,6 +288,10 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <div id="week-7" class="section level2">
 <h2>Week #7</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -301,6 +329,10 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <div id="week-8" class="section level2">
 <h2>Week #8</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -334,6 +366,10 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <div id="week-9" class="section level2">
 <h2>Week #9</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -375,6 +411,10 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <div id="week-10" class="section level2">
 <h2>Week #10</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
