--- a/content/courses/ekonometri-ars-I-II/3-exams-ps.html
+++ b/content/courses/ekonometri-ars-I-II/3-exams-ps.html
@@ -32,10 +32,7 @@ weight: 40
 <li><a href="../../../repo/akek/courses/ekonometri-ars/Ekonometri_Ars_I-II_-_Makale_Taslak_Aciklamasi.pdf">Makale Taslak Açıklaması</a> 🇹🇷</li>
 <li><a href="../../../repo/akek/courses/ekonometri-ars/Ekonometri_Ars_I-II_-_Akademik_Etik_Aciklamasi.pdf">Akademik Etik Açıklaması</a> 🇹🇷</li>
 <li><a href="https://www.aeaweb.org/jel/guide/jel.php">JEL Sınıflandırma Kodları</a> 🇺🇸</li>
-<li><a href="">CANVAS’a Online Klasik Sınav Nasıl Yüklenir?</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/watch?v=wsUB6-fTxA8&amp;feature=youtu.be">DYS’ye Online Klasik Sınav Nasıl Yüklenir?</a> 🇹🇷⛔</li>
-</ul></li>
+<li><a href="">CANVAS’a Online Klasik Sınav Nasıl Yüklenir?</a> 🇹🇷🔥</li>
 </ul>
 </div>
 <div id="sunum" class="section level2">
@@ -43,7 +40,7 @@ weight: 40
 <ul>
 <li><a href="../../../repo/akek/courses/ekonometri-ars/Ekonometri_Ars_I_Sunum_Degerlendirme.pdf">Sunum Değerlendirme Esasları (Ekonometri Araştırmaları I Dersi İçin)</a> 🇹🇷</li>
 <li><a href="../../../repo/akek/courses/ekonometri-ars/Ekonometri_Ars_II_Sunum_Degerlendirme.pdf">Sunum Değerlendirme Esasları (Ekonometri Araştırmaları II Dersi İçin)</a> 🇹🇷</li>
-<li><a href="">CANVAS’a Online Klasik Ödev veya Sunum Nasıl Yüklenir?</a> 🇹🇷🔥</li>
+<li><a href="">CANVAS’a Online Sunum Nasıl Yüklenir?</a> 🇹🇷🔥</li>
 </ul>
 <div id="örnek-makale-ve-sunumlar" class="section level3">
 <h3>Örnek Makale ve Sunumlar</h3>
