--- a/content/courses/ekonometri-i/3-exams-ps.html
+++ b/content/courses/ekonometri-i/3-exams-ps.html
@@ -26,10 +26,7 @@ weight: 40
 <div id="ödevler" class="section level2">
 <h2>Ödevler</h2>
 <ul>
-<li><a href="">CANVAS’ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/watch?v=OOqC0JrtOaI&amp;feature=youtu.be">DYS’de Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷⛔</li>
-</ul></li>
+<li><a href="">CANVAS’ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷🔥</li>
 </ul>
 </div>
 <div id="sınavlar" class="section level2">
@@ -37,13 +34,7 @@ weight: 40
 <ul>
 <li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I_-_Ara_Sinav_Inceleme.pdf">Ara Sınav - İnceleme</a> 🇹🇷🔥</li>
 <li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I_-_Final_Sinavi_Inceleme.pdf">Final Sınavı - İnceleme</a> 🇹🇷🔥</li>
-<li><a href="">CANVAS’ta Online Çoktan Seçmeli Sınav Nasıl Yapılır?</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/watch?v=V_Oyg-WGoK4&amp;feature=youtu.be">DYS’de Online Çoktan Seçmeli Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
-</ul></li>
-<li><a href="">CANVAS’a Online Klasik Sınav Nasıl Yüklenir</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/watch?v=wsUB6-fTxA8&amp;feature=youtu.be">DYS’ye Online Klasik Sınav Nasıl Yüklenir?</a> 🇹🇷⛔</li>
-</ul></li>
+<li><a href="">CANVAS’ta Online Çoktan Seçmeli Sınav Nasıl Yapılır?</a> 🇹🇷🔥</li>
+<li><a href="">CANVAS’a Online Klasik Sınav Nasıl Yüklenir</a> 🇹🇷🔥</li>
 </ul>
 </div>
