--- a/content/courses/ekonometri-ii/01-ec.html
+++ b/content/courses/ekonometri-ii/01-ec.html
@@ -34,6 +34,11 @@ weight: 21
 <div id="ders-planı-ve-önemli-günler" class="section level2">
 <h2>Ders Planı ve Önemli Günler</h2>
 <table>
+<colgroup>
+<col width="33%" />
+<col width="33%" />
+<col width="33%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">1. Öğretim</th>
@@ -48,7 +53,7 @@ weight: 21
 <td align="left"><a href="../../../repo/akek/courses/ekonometri-ii/EC/Ekonometri_II_-_Ders_Plani.pdf">Ders Planı</a> 🇹🇷🔄</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ii/EC/Ekonometri_II_1O%20-%20Onemli%20Gunler.pdf">Önemli Günler</a> 🇹🇷</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-ii/EC/Ekonometri_II_1O_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷</td>
 <td align="left"><a href="../../../repo/akek/courses/ekonometri-ii/EC/Ekonometri_II_2O_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷</td>
 <td align="left"><a href="../../../repo/akek/courses/ekonometri-ii/EC/Ekonometri_II_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷🔥</td>
 </tr>
