--- a/content/courses/ekonomi/2-links-docs.html
+++ b/content/courses/ekonomi/2-links-docs.html
@@ -23,6 +23,13 @@ weight: 30
 <p>{{% alert note %}}
 İncelediğiniz sayfada 🇹🇷 <font color="red"><strong>Türkçe</strong></font>, 🇺🇸 <font color="red"><strong>İngilizce</strong></font>, 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder.
 {{% /alert %}}</p>
+<div id="online-ders" class="section level2">
+<h2>Online-Ders</h2>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=dP1UaNDRJxY&amp;list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&amp;index=1">Microsoft Teams - Konuk Olarak Online Derse Bağlanma</a> 🇹🇷</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar">CANVAS Bilgileri (YouTube Playlist)</a> 🇹🇷🔥</li>
+</ul>
+</div>
 <div id="akademi-ekonometri" class="section level2">
 <h2>Akademi Ekonometri</h2>
 <ul>
@@ -36,22 +43,8 @@ weight: 30
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnP7rJTS--Dc1SKhFw7YZYU">Economics - Online-Class (YouTube Playlist)</a> 🇺🇸🔄</li>
 </ul></li>
 </ul>
-</div>
-<div id="diğer-dokümanlar" class="section level2">
-<h2>Diğer Dokümanlar</h2>
-<ul>
-<li>🔥</li>
-</ul>
-</div>
-<div id="online-ders" class="section level2">
-<h2>Online-Ders</h2>
-<ul>
-<li><a href="https://www.youtube.com/watch?v=dP1UaNDRJxY&amp;list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit&amp;index=1">Microsoft Teams - Konuk Olarak Online Derse Bağlanma</a> 🇹🇷</li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlVeoJ4snHehOPvoB-7T0ar">CANVAS Bilgileri (YouTube Playlist)</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnUtMAi-Xi-q79LA4lG0Bbe">DYS Bilgileri (YouTube Playlist)</a> 🇹🇷⛔</li>
-</ul></li>
-</ul>
+<!-- ## Diğer Dokümanlar -->
+<!-- - 🔥 -->
 </div>
 <div id="diğer-linkler" class="section level2">
 <h2>Diğer Linkler</h2>
