--- a/content/courses/ekonomi/4-lectures.html
+++ b/content/courses/ekonomi/4-lectures.html
@@ -26,6 +26,10 @@ weight: 50
 <div id="hafta-1" class="section level2">
 <h2>Hafta #1</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -63,6 +67,10 @@ weight: 50
 <div id="hafta-2" class="section level2">
 <h2>Hafta #2</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -96,6 +104,10 @@ weight: 50
 <div id="hafta-3" class="section level2">
 <h2>Hafta #3</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -137,6 +149,10 @@ weight: 50
 <div id="hafta-4" class="section level2">
 <h2>Hafta #4</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -174,6 +190,10 @@ weight: 50
 <div id="hafta-5" class="section level2">
 <h2>Hafta #5</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -214,7 +234,7 @@ weight: 50
 <td align="left"><a href="../../../repo/akek/courses/economics/Economics_-_Week_5_Worksheet_Solution.pdf">Worksheet Solutions</a></td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi_-_Hafta_5_CS_Cevaplar__Grafiksel.pdf">Çalışma Soruları Cevaplar - Grafiksel</a> 🔥</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi_-_Hafta_5_CS_Cevap__Grafiksel.pdf">Çalışma Soruları Cevaplar - Grafiksel</a> 🔥</td>
 <td align="left"><a href="../../../repo/akek/courses/economics/Economics_-_Week_5_Worksheet_Solution__Graphical.pdf">Worksheet Solutions - Graphical</a></td>
 </tr>
 </tbody>
@@ -223,6 +243,10 @@ weight: 50
 <div id="hafta-6" class="section level2">
 <h2>Hafta #6</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -264,6 +288,10 @@ weight: 50
 <div id="hafta-7" class="section level2">
 <h2>Hafta #7</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -301,6 +329,10 @@ weight: 50
 <div id="hafta-8" class="section level2">
 <h2>Hafta #8</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -334,6 +366,10 @@ weight: 50
 <div id="hafta-9" class="section level2">
 <h2>Hafta #9</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -375,6 +411,10 @@ weight: 50
 <div id="hafta-10" class="section level2">
 <h2>Hafta #10</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
