--- a/content/courses/ekonomi/3-exams-ps.html
+++ b/content/courses/ekonomi/3-exams-ps.html
@@ -26,15 +26,16 @@ weight: 40
 <div id="ödevler" class="section level2">
 <h2>Ödevler</h2>
 <ul>
-<li><a href="">CANVAS’ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/watch?v=OOqC0JrtOaI&amp;feature=youtu.be">DYS’de Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷⛔</li>
-</ul></li>
+<li><a href="">CANVAS’ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷🔥</li>
 </ul>
 </div>
 <div id="sınavlar" class="section level2">
 <h2>Sınavlar</h2>
 <table>
+<colgroup>
+<col width="45%" />
+<col width="54%" />
+</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Türkçe 🇹🇷</th>
@@ -43,23 +44,17 @@ weight: 40
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Ara%20Sinav%20Inceleme%20(Kara).pdf">Ara Sınav - İnceleme</a></td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Midterm%20Exam%20Review%20(Kara).pdf">Midterm Exam - Review</a></td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Ara%20Sinav%20Inceleme.pdf">Ara Sınav - İnceleme</a></td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Midterm%20Exam%20Review.pdf">Midterm Exam - Review</a></td>
 </tr>
 <tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Final%20Sinavi%20Inceleme%20(Kara).pdf">Final Sınavı - İnceleme</a></td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Final%20Exam%20Review%20(Kara).pdf">Final Exam - Review</a></td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Final%20Sinavi%20Inceleme.pdf">Final Sınavı - İnceleme</a></td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Final%20Exam%20Review.pdf">Final Exam - Review</a></td>
 </tr>
 </tbody>
 </table>
 <ul>
-<li><a href="">CANVAS’ta Online Çoktan Seçmeli Sınav Nasıl Yapılır?</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/watch?v=V_Oyg-WGoK4&amp;feature=youtu.be">DYS’de Online Çoktan Seçmeli Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
-</ul></li>
-<li><a href="">CANVAS’a Online Klasik Sınav Nasıl Yüklenir</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/watch?v=wsUB6-fTxA8&amp;feature=youtu.be">DYS’ye Online Klasik Sınav Nasıl Yüklenir?</a> 🇹🇷⛔</li>
-</ul></li>
+<li><a href="">CANVAS’ta Online Çoktan Seçmeli Sınav Nasıl Yapılır?</a> 🇹🇷🔥</li>
+<li><a href="">CANVAS’a Online Klasik Sınav Nasıl Yüklenir</a> 🇹🇷🔥</li>
 </ul>
 </div>
