--- a/content/courses/zaman-serileri-analizi/4-lectures.html
+++ b/content/courses/zaman-serileri-analizi/4-lectures.html
@@ -60,16 +60,10 @@ weight: 50
 <li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_3/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.R">Uygulama - R</a> 🇹🇷</li>
 </ul></li>
 </ul>
-</div>
-<div id="hafta-4" class="section level2">
-<h2>Hafta #4</h2>
-<ul>
-<li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_4.pdf">Slaytlar</a> 🇹🇷🔥</li>
-<li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.html">Uygulama - HTML</a> 🇹🇷🔥
-<ul>
-<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_4/Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_4/Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.R">Uygulama - R</a> 🇹🇷🔥</li>
-</ul></li>
-</ul>
+<!-- ## Hafta #4 -->
+<!-- - [Video]() 🇹🇷🔥 -->
+<!-- - [Slaytlar](../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_4.pdf) 🇹🇷🔥 -->
+<!-- - [Uygulama - HTML](https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.html) 🇹🇷🔥 -->
+<!--     + [Uygulama - RMarkdown](../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_4/Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.Rmd) 🇹🇷🔥 -->
+<!--     + [Uygulama - R](../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_4/Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.R) 🇹🇷🔥 -->
 </div>
