financial econometrics added

--- a/content/courses/finansal-ekonometri/2-links-docs.html
+++ b/content/courses/finansal-ekonometri/2-links-docs.html
@@ -1,14 +1,14 @@
 ---
 title: Önemli Link ve Diğer Dokümanlar
 linktitle: Link ve Diğer Dokümanlar
-date: "2020-10-05"
-lastmod: "2020-10-13"
+date: "2022-02-14"
+lastmod: "2022-02-14"
 draft: false
 # toc: true
 type: docs
 
 menu:
-  ekonometri-ii:
+  finansal-ekonometri:
     parent: 
     weight: 30
 
