--- a/content/courses/zaman-serileri-analizi/_index.html
+++ b/content/courses/zaman-serileri-analizi/_index.html
@@ -1,8 +1,8 @@
 ---
 # Course title, summary, and position.
 linktitle: "Zaman Serileri Analizi"
-summary: "Verildiği son bölüm ve dönem: İktisat - Yaz 2021"
-weight: 21
+summary: "Verildiği son bölüm ve dönem: İktisat - Bahar 2022"
+weight: 20
 categories: [Ders]
 tags: [zaman serileri analizi, türkçe, turkish]
 
