--- a/content/courses/ekonometri-i/2-links-docs.html
+++ b/content/courses/ekonometri-i/2-links-docs.html
@@ -58,6 +58,11 @@ weight: 30
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitk83Yi1sMWWviJXi2oeUTiS">Ekonometrik Modelleme - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitk5XQXH9JYm81CJrr4o9Zhl">R ile Ekonometrik Modelleme - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
 </ul></li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnEiFnnYrta5p7ig_7mH0Yz">Finansal Ekonometri - Ders Videoları (YouTube Playlist)</a> 🇹🇷🔥
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlf2aixlnb1P5DLLFZINWTS">Finansal Ekonometri - Online-Ders (YouTube Playlist)</a> 🇹🇷🔥</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitmRipiIBnVojFg4J0yn7iPd">R ile Finansal Ekonometri - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
+</ul></li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitml03Ea8sOjblldkZW-XU5J">R ile 15 Dakikada Kolay Kodlama - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlK87V9m6L0hT2jfKmWkNct">R Rastgele - Video Serisi (YouTube Playlist)</a> 🇹🇷🔄</li>
 </ul>
