some link corrections

--- a/content/courses/ekonomi-i/4-lectures.html
+++ b/content/courses/ekonomi-i/4-lectures.html
@@ -428,7 +428,7 @@ weight: 50
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Ekonomiye_Giris_I_-_Hafta_10_CS_Cevap.pdf">Çalışma Soruları Cevaplar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I_-_Week_10%20Worksheet_Solution.pdf">Worksheet Solutions</a></td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I_-_Week_10_Worksheet_Solution.pdf">Worksheet Solutions</a></td>
 </tr>
 </tbody>
 </table>
