--- a/content/courses/ekonomi/3-exams-ps.html
+++ b/content/courses/ekonomi/3-exams-ps.html
@@ -44,12 +44,12 @@ weight: 40
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Ara%20Sinav%20Inceleme.pdf">Ara Sınav - İnceleme</a></td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Midterm%20Exam%20Review.pdf">Midterm Exam - Review</a></td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi_-_Ara_Sinav_Inceleme.pdf">Ara Sınav - İnceleme</a></td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics_-_Midterm_Exam_Review.pdf">Midterm Exam - Review</a></td>
 </tr>
 <tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Final%20Sinavi%20Inceleme.pdf">Final Sınavı - İnceleme</a></td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Final%20Exam%20Review.pdf">Final Exam - Review</a></td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi_-_Final_Sinavi_Inceleme.pdf">Final Sınavı - İnceleme</a></td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics_-_Final_Exam_Review.pdf">Final Exam - Review</a></td>
 </tr>
 </tbody>
 </table>
