financial_econometrics update

--- a/content/courses/finansal-ekonometri/01-ec.html
+++ b/content/courses/finansal-ekonometri/01-ec.html
@@ -34,14 +34,14 @@ weight: 21
 <div id="ders-planı-ve-önemli-günler" class="section level2">
 <h2>Ders Planı ve Önemli Günler</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/finansal-ekonometri/EC/Finansal_Ekonometri_-_Ders_Plani.pdf">Ders Planı</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/finansal-ekonometri/EC/Finansal_Ekonometri_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/finansal-ekonometri/EC/Finansal_Ekonometri_-_Ders_Plani.pdf">Ders Planı</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/finansal-ekonometri/EC/Finansal_Ekonometri_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷🔥</li>
 </ul>
 </div>
 <div id="ders-kitabı" class="section level2">
 <h2>Ders Kitabı</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/finansal-ekonometri/Finansal_Ekonometri_-_Kitap_Secimi_Aciklamasi.pdf">Kitap Seçimi Açıklaması</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/finansal-ekonometri/Finansal_Ekonometri_-_Kitap_Secimi_Aciklamasi.pdf">Kitap Seçimi Açıklaması</a> 🇹🇷🔥</li>
 </ul>
 </div>
 <div id="ders-değerlendirme-anketi" class="section level2">
