--- a/content/courses/finansal-ekonometri/2-links-docs.html
+++ b/content/courses/finansal-ekonometri/2-links-docs.html
@@ -16,7 +16,6 @@ menu:
 weight: 30
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p><br></p>
@@ -81,9 +80,9 @@ weight: 30
 <div id="diğer-linkler" class="section level2">
 <h2>Diğer Linkler</h2>
 <ul>
-<li><a href="https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.html">R mini BootCamp - HTML</a> 🇺🇸
+<li><a href="https://akademiekonometri.github.io/R_mini_BootCamp/R_mini_BootCamp.html">R mini BootCamp - HTML</a> 🇺🇸
 <ul>
-<li><a href="https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.R">R mini BootCamp - R</a> 🇺🇸</li>
+<li><a href="https://akademiekonometri.github.io/R_mini_BootCamp/R_mini_BootCamp.R">R mini BootCamp - R</a> 🇺🇸</li>
 </ul></li>
 <li><a href="https://yokdersleri.yok.gov.tr/">YÖK Dersleri Platformu</a> 🇹🇷</li>
 <li><a href="https://acikders.tuba.gov.tr/">TÜBA Açık Ders Malzemeleri Portalı</a> 🇹🇷</li>
