--- a/content/courses/zaman-serileri-analizi/4-lectures.html
+++ b/content/courses/zaman-serileri-analizi/4-lectures.html
@@ -16,7 +16,6 @@ menu:
 weight: 50
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p><br></p>
@@ -28,7 +27,7 @@ weight: 50
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
 <li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_1.pdf">Slaytlar</a> 🇹🇷</li>
-<li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.html">Uygulama - HTML</a> 🇹🇷
+<li><a href="https://akademiekonometri.github.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.html">Uygulama - HTML</a> 🇹🇷
 <ul>
 <li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷</li>
 <li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.R">Uygulama - R</a> 🇹🇷</li>
@@ -42,7 +41,7 @@ weight: 50
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
 <li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_2.pdf">Slaytlar</a> 🇹🇷</li>
-<li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.html">Uygulama - HTML</a> 🇹🇷
+<li><a href="https://akademiekonometri.github.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.html">Uygulama - HTML</a> 🇹🇷
 <ul>
 <li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷</li>
 <li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.R">Uygulama - R</a> 🇹🇷</li>
@@ -54,7 +53,7 @@ weight: 50
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
 <li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_3.pdf">Slaytlar</a> 🇹🇷</li>
-<li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.html">Uygulama - HTML</a> 🇹🇷
+<li><a href="https://akademiekonometri.github.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.html">Uygulama - HTML</a> 🇹🇷
 <ul>
 <li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_3/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷</li>
 <li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_3/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.R">Uygulama - R</a> 🇹🇷</li>
