--- a/content/courses/ekonometri-ars-I-II/01-ec.html
+++ b/content/courses/ekonometri-ars-I-II/01-ec.html
@@ -16,7 +16,6 @@ menu:
 weight: 21
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p><br></p>
@@ -35,45 +34,17 @@ weight: 21
 <h2>Ders Planı ve Önemli Günler</h2>
 <div id="ekonometri-araştırmaları-i" class="section level4">
 <h4>Ekonometri Araştırmaları I</h4>
-<table>
-<thead>
-<tr class="header">
-<th align="left">1. Öğretim</th>
-<th align="left">2. Öğretim</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri_Ars_I_1O_-_Ders_Plani.pdf">Ders Planı</a> 🇹🇷</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri_Ars_I_2O_-_Ders_Plani.pdf">Ders Planı</a> 🇹🇷</td>
-</tr>
-<tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri_Ars_I_1O_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri_Ars_I_2O_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷</td>
-</tr>
-</tbody>
-</table>
+<ul>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri_Ars_I_-_Ders_Plani.pdf">Ders Planı</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri_Ars_I_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷</li>
+</ul>
 </div>
 <div id="ekonometri-araştırmaları-ii" class="section level4">
 <h4>Ekonometri Araştırmaları II</h4>
-<table>
-<thead>
-<tr class="header">
-<th align="left">1. Öğretim</th>
-<th align="left">2. Öğretim</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri_Ars_II_1O_-_Ders_Plani.pdf">Ders Planı</a> 🇹🇷</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri_Ars_II_2O_-_Ders_Plani.pdf">Ders Planı</a> 🇹🇷</td>
-</tr>
-<tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri_Ars_II_1O_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri_Ars_II_2O_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷</td>
-</tr>
-</tbody>
-</table>
+<ul>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri_Ars_II_-_Ders_Plani.pdf">Ders Planı</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri_Ars_II_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷</li>
+</ul>
 </div>
 </div>
 <div id="ders-kaynakları" class="section level2">
