--- a/content/courses/economics/01-ce.html
+++ b/content/courses/economics/01-ce.html
@@ -16,7 +16,6 @@ menu:
 weight: 21
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p><br></p>
@@ -33,24 +32,10 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 </div>
 <div id="syllabus-and-important-dates" class="section level2">
 <h2>Syllabus and Important Dates</h2>
-<table>
-<thead>
-<tr class="header">
-<th align="left">Normal Education</th>
-<th align="left">Summer School</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/economics/CE/Economics_NE_-_Syllabus.pdf">Syllabus</a> 🇺🇸</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/CE/Economics_-_Syllabus.pdf">Syllabus</a> 🇺🇸</td>
-</tr>
-<tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/economics/CE/Economics_NE_-_Important_Dates.pdf">Important Dates</a> 🇺🇸</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/CE/Economics_-_Important_Dates.pdf">Important Dates</a> 🇺🇸</td>
-</tr>
-</tbody>
-</table>
+<ul>
+<li><a href="../../../repo/akek/courses/economics/CE/Economics_-_Syllabus.pdf">Syllabus</a> 🇺🇸</li>
+<li><a href="../../../repo/akek/courses/economics/CE/Economics_-_Important_Dates.pdf">Important Dates</a> 🇺🇸</li>
+</ul>
 </div>
 <div id="course-book" class="section level2">
 <h2>Course Book</h2>
