--- a/content/courses/ekonometri-i/01-ec.html
+++ b/content/courses/ekonometri-i/01-ec.html
@@ -16,7 +16,6 @@ menu:
 weight: 21
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p><br></p>
@@ -33,27 +32,10 @@ weight: 21
 </div>
 <div id="ders-planı-ve-önemli-günler" class="section level2">
 <h2>Ders Planı ve Önemli Günler</h2>
-<table>
-<thead>
-<tr class="header">
-<th align="left">1. Öğretim</th>
-<th align="left">2. Öğretim</th>
-<th align="left">Yaz Okulu</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_1O_-_Ders_Plani.pdf">Ders Planı</a> 🇹🇷</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_2O_-_Ders_Plani.pdf">Ders Planı</a> 🇹🇷</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_-_Ders_Plani.pdf">Ders Planı</a> 🇹🇷🔥</td>
-</tr>
-<tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_1O_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_2O_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷🔥</td>
-</tr>
-</tbody>
-</table>
+<ul>
+<li><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_-_Ders_Plani.pdf">Ders Planı</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_-_Onemli_Gunler.pdf">Önemli Günler</a> 🇹🇷</li>
+</ul>
 </div>
 <div id="ders-kitabı" class="section level2">
 <h2>Ders Kitabı</h2>
