zaman serileri odev ornek cozum

--- a/content/courses/zaman-serileri-analizi/3-exams-ps.html
+++ b/content/courses/zaman-serileri-analizi/3-exams-ps.html
@@ -16,7 +16,6 @@ menu:
 weight: 40
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p><br></p>
@@ -27,6 +26,8 @@ weight: 40
 <h2>Ödevler</h2>
 <ul>
 <li><a href="">CANVAS’ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Problem%20Set%202_Ornek%20Cozum.R">Ödev #2 - Örnek Çözüm</a></li>
+<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Problem%20Set%204_Ornek%20Cozum.R">Ödev #4 - Örnek Çözüm</a></li>
 </ul>
 </div>
 <div id="sınavlar" class="section level2">
