2025 Fall Update - 4 (Arastirma Dersi Notlari)

--- a/content/courses/ekonometri-ars-I-II/4-lectures.html
+++ b/content/courses/ekonometri-ars-I-II/4-lectures.html
@@ -16,7 +16,6 @@ menu:
 weight: 50
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p><br></p>
@@ -31,33 +30,33 @@ weight: 50
 <div id="kitaplar-ve-makaleler" class="section level4">
 <h4>Kitaplar ve Makaleler</h4>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/Kokdemir__Akademik%20Yazim%20Kurallari%20Kitapcigi.pdf">Akademik Yazım Kuralları Kitapçığı (Kökdemir)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/Seckin-(2003a)-Bilimsel%20Bir%20Makale%20Nasil%20Yazilir-(article).pdf">Bilimsel Bir Makale Nasıl Yazılır? (Seçkin)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/Yilmaz-(2005a)-Bilimsel%20Makale%20Nasil%20Yazilir-(article).pdf">Bilimsel Makale Nasıl Yazılır? (Yılmaz)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/Day__Bilimsel%20Bir%20Makale%20Nasil%20Yazilir%20ve%20Yayimlanir.pdf">Bilimsel Bir Makale Nasıl Yazılır ve Yayımlanır? (Day)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Kokdemir__Akademik_Yazim_Kurallari_Kitapcigi.pdf">Akademik Yazım Kuralları Kitapçığı (Kökdemir)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Seckin-2003a-Bilimsel_Bir_Makale_Nasil_Yazilir-article.pdf">Bilimsel Bir Makale Nasıl Yazılır? (Seçkin)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Yilmaz-2005a-Bilimsel_Makale_Nasil_Yazilir-article.pdf">Bilimsel Makale Nasıl Yazılır? (Yılmaz)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Day__Bilimsel_Bir_Makale_Nasil_Yazilir_ve_Yayimlanir.pdf">Bilimsel Bir Makale Nasıl Yazılır ve Yayımlanır? (Day)</a> 🇹🇷</li>
 </ul>
 </div>
 <div id="slaytlar" class="section level4">
 <h4>Slaytlar</h4>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/1%20-%20Akademik%20Makale%20Yazim%20Tekniklerine%20Giris.ppt">1 - Akademik Makale Yazım Tekniklerine Giriş (MK)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/2%20-%20Akademik%20Makale%20Yazimi.ppt">2 - Akademik Makale Yazımı (MK)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/3%20-%20Akademik%20Makale.ppt">3 - Akademik Makale (MK)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/4%20-%20Yazim%20Oncesi%20Hazirlik.ppt">4 - Yazım Öncesi Hazırlık (MK)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/5%20-%20Baslik.ppt">5 - Başlık (MK)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/6%20-%20Yazar%20Isimleri.ppt">6 - Yazar İsimleri (MK)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/7%20-%20Ozet.ppt">7 - Özet (MK)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/8%20-%20Giris.ppt">8 - Giriş (MK)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/9%20-%20Materyal%20ve%20Metotlar.ppt">9 - Materyal ve Metotlar (MK)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/10%20-%20Bulgular.ppt">10 - Bulgular (MK)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/11%20-%20Tartisma.ppt">11 - Tartışma (MK)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/12%20-%20Kaynaklar%20ve%20Atif.ppt">12 - Kaynaklar ve Atıf (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/1_-_Akademik_Makale_Yazim_Tekniklerine_Giris.ppt">1 - Akademik Makale Yazım Tekniklerine Giriş (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/2_-_Akademik_Makale_Yazimi.ppt">2 - Akademik Makale Yazımı (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/3_-_Akademik_Makale.ppt">3 - Akademik Makale (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/4_-_Yazim_Oncesi_Hazirlik.ppt">4 - Yazım Öncesi Hazırlık (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/5_-_Baslik.ppt">5 - Başlık (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/6_-_Yazar_Isimleri.ppt">6 - Yazar İsimleri (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/7_-_Ozet.ppt">7 - Özet (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/8_-_Giris.ppt">8 - Giriş (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/9_-_Materyal_ve_Metotlar.ppt">9 - Materyal ve Metotlar (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/10_-_Bulgular.ppt">10 - Bulgular (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/11_-_Tartisma.ppt">11 - Tartışma (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/12_-_Kaynaklar_ve_Atif.ppt">12 - Kaynaklar ve Atıf (MK)</a> 🇹🇷</li>
 </ul>
 </div>
 <div id="diğer-kaynaklar" class="section level4">
 <h4>Diğer Kaynaklar</h4>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/Uluoglu__Bilimsel%20Makale%20Yazim%20Teknikleri.pdf">Bilimsel Makale Yazım Teknikleri (Uluoğlu)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Uluoglu__Bilimsel_Makale_Yazim_Teknikleri.pdf">Bilimsel Makale Yazım Teknikleri (Uluoğlu)</a> 🇹🇷</li>
 <li><a href="https://www.akademikkaynak.com/makale-nasil-yazilir.html">Makale Nasıl Yazılır?</a> 🇹🇷</li>
 </ul>
 </div>
@@ -73,7 +72,7 @@ weight: 50
 <div id="slaytlar-1" class="section level4">
 <h4>Slaytlar</h4>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/1%20-%20Makale%20Nasil%20Sunulur.ppt">1 - Makale Nasıl Sunulur? (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/1_-_Makale_Nasil_Sunulur.ppt">1 - Makale Nasıl Sunulur? (MK)</a> 🇹🇷</li>
 </ul>
 </div>
 <div id="diğer-kaynaklar-1" class="section level4">
@@ -94,8 +93,8 @@ weight: 50
 <div id="slaytlar-2" class="section level4">
 <h4>Slaytlar</h4>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/1%20-%20Makale%20Yayinlama%20Sureci.ppt">1 - Makale Yayınlama Süreci (MK)</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/2%20-%20Makale%20Degerlendirme__Editor%20ve%20Hakemler.ppt">2 - Makale Değerlendirme - Editör ve Hakemler (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/1_-_Makale_Yayinlama_Sureci.ppt">1 - Makale Yayınlama Süreci (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/2_-_Makale_Degerlendirme__Editor_ve_Hakemler.ppt">2 - Makale Değerlendirme - Editör ve Hakemler (MK)</a> 🇹🇷</li>
 </ul>
 </div>
 <div id="diğer-kaynaklar-2" class="section level4">
@@ -116,7 +115,7 @@ weight: 50
 <div id="slaytlar-3" class="section level4">
 <h4>Slaytlar</h4>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/1%20-%20Tez%20Nasil%20Yazilir.ppt">1 - Tez Nasıl Yazılır? (MK)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/1_-_Tez_Nasil_Yazilir.ppt">1 - Tez Nasıl Yazılır? (MK)</a> 🇹🇷</li>
 </ul>
 </div>
 <div id="diğer-kaynaklar-3" class="section level4">
@@ -131,7 +130,7 @@ weight: 50
 <div id="kitaplar-ve-makaleler-4" class="section level4">
 <h4>Kitaplar ve Makaleler</h4>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/Bas__Anket%20Hazirlama%20Kilavuzu.pdf">Anket Hazırlama Kılavuzu (Baş)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Bas__Anket_Hazirlama_Kilavuzu.pdf">Anket Hazırlama Kılavuzu (Baş)</a> 🇹🇷</li>
 </ul>
 </div>
 <div id="slaytlar-4" class="section level4">
