--- a/content/courses/ekonometri-ars-I-II/01-ec.html
+++ b/content/courses/ekonometri-ars-I-II/01-ec.html
@@ -47,6 +47,16 @@ weight: 21
 </ul>
 </div>
 </div>
+<div id="doldurulması-gereken-formlar" class="section level2">
+<h2>Doldurulması Gereken Formlar</h2>
+<ul>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/EC/1_-_Danisman-Ogrenci-Sozlesmesi-Formu_-_Guz.docx">Danışman Öğrenci Sözleşmesi Formu - Güz</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/EC/1_-_Danisman-Ogrenci-Sozlesmesi-Formu_-_Bahar.docx">Danışman Öğrenci Sözleşmesi Formu - Bahar</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/EC/3_-_Yapay-Zeka-Kullanim-Beyani.docx">Yapay Zeka Kullanım Beyanı - Güz ve Bahar</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/EC/4_-_Yazim-Sablonu-Kontrol-Listesi.docx">Yazım Şablonu Kontrol Listesi - Güz ve Bahar</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/EC/5_-_Haftalik-Ilerleme-Raporu.docx">Haftalık İlerleme Raporu - Güz ve Bahar</a> 🇹🇷</li>
+</ul>
+</div>
 <div id="ders-kaynakları" class="section level2">
 <h2>Ders Kaynakları</h2>
 <ul>
